<resources>
    <string name="app_name">CanvasLearn</string>

    <string name="canvasdraw_BasicUse">Canvas绘制的基础使用</string>
    <string name="drawColorView">绘制颜色</string>
    <string name="drawPointView">绘制点</string>
    <string name="drawLineView">绘制直线</string>
    <string name="drawRectView">绘制矩形</string>
    <string name="drawRoundCorneRectView">绘制圆角矩形</string>
    <string name="drawOvalView">绘制椭圆</string>
    <string name="drawCircleView">绘制圆形</string>
    <string name="drawArcView">绘制圆弧</string>
    <string name="paintUseLearnView">Paint的三种Style</string>
    <string name="drawPieView">饼状图</string>
    <string name="canvasTranslateView">画布位移操作</string>
    <string name="canvasScaleView">画布缩放操作</string>
    <string name="canvasScaleViewOfForCircle">画布缩放操作之for循环</string>
    <string name="canvasRotateView">画布旋转操作</string>
    <string name="canvasRotateViewOfCircle">画布旋转操作之"不明觉厉"控件</string>
    <string name="canvasSkewView">画布错切操作</string>
    <string name="drawPictureView">绘制图片之drawPicture</string>
    <string name="drawBitmapView">绘制图片之drawBitmap</string>
    <string name="drawBitmapViewOfCheckView">绘制图片之drawBitmap之checkView</string>
    <string name="drawTextViewFirstKind">绘制文字之第一类操作</string>
    <string name="drawTextViewSecondKind">绘制文字之第二类操作</string>
    <string name="pathUseMethodDetail">Path的使用方法详解</string>
    <!--Path的使用方法详解-->
    <string name="pathUseMethodDetailFirstGroup">Path的使用方法详解第一组</string>
    <string name="pathUseMethodDetailAddXxx">Path的使用方法详解addXxx</string>
    <string name="pathUseMethodDetailAddPath">Path的使用方法详解addPath</string>
    <string name="pathUseMethodDetailAddArc">Path的使用方法详解addArc</string>
    <string name="pathUseMethodDetailArcTo">Path的使用方法详解arcTo</string>
    <string name="pathUseMethodDetailOffset">Path的使用方法详解offset</string>
    <string name="pathUseMethodDetailRadarView">Path的使用方法详解之雷达图</string>

    <string name="pathUseMethodDetailFilltype">Path的使用方法详解之Filltype</string>

    <string name="pathUseMethodDetailFilltype2">Path的使用方法详解之Filltype2</string>

    <string name="pathUseMethodDetailBooleanOperation">Path的使用方法详解之布尔操作</string>
    <string name="pathUseMethodDetailComputeBounds">Path的使用方法详解之测量边界</string>

    <string name="pathUseMethodDetailBazier">Path的使用方法详解之贝塞尔曲线</string>
    <string name="pathUseMethodDetailBazierSecond">Path的使用方法详解之二阶贝塞尔曲线</string>
    <string name="pathUseMethodDetailBazierThird">Path的使用方法详解之三阶贝塞尔曲线</string>
    <string name="pathUseMethodDetailBazierHeart">Path的使用方法详解之贝塞尔曲线之心形</string>

    <string name="PathMeasureUse">PathMeasure类的使用</string>
    <string name="PathMeasureConstructor">PathMeasure构造方法</string>
    <string name="PathMeasureGetSegment">PathMeasure的getSegment</string>
    <string name="PathMeasureNextContour">PathMeasure的nextContour</string>
    <string name="PathMeasureGetPosTan">PathMeasure的getPosTan</string>
    <string name="PathMeasureGetMatrix">PathMeasure的getMatrix</string>
    <string name="PathMeasureSearchView">PathMeasure综合之searchView</string>

    <string name="MatrixMethodUse">Matrix类的方法使用</string>
    <string name="MatrixMapPointsUse">Matrix类的mapPoints</string>
    <string name="MatrixMapRadiusUse">Matrix类的mapRadius</string>
    <string name="MatrixMapRectUse">Matrix类的mapRect</string>
    <string name="MatrixMapVectors">Matrix类的mapVectors</string>
    <string name="MatrixSetPolyToPoly">Matrix类的setPolyToPoly</string>
    <string name="MatrixSetPolyToPolyPointCountTest">Matrix类的setPolyToPoly的pointCount数值测试</string>
    <string name="MatrixSetRectToRectTest">Matrix类的setRectToRect</string>
    <string name="MatrixAboutMethodTest">Matrix相关函数</string>

    <string name="getLocationTest">获取View在屏幕上的绝对位置</string>

    <string name="rotate3dAnimationTest">3D旋转动画测试</string>

    <string name="RegionUse">Region的使用</string>
    <string name="RegionUse_TouchLocTest">Region的使用--Touch位置测试</string>
    <string name="RegionUse_RemoteControlMenu">Region的使用--遥控器界面</string>
    <string name="test_str">测试</string>


</resources>
