<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.liuh.canvaslearn.activity.MatrixMethodUseActivity">

    <Button
        android:id="@+id/btn_MatrixMapPointsUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MatrixMapPointsUse" />

    <Button
        android:id="@+id/btn_MatrixMapRadiusUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MatrixMapRadiusUse" />

    <Button
        android:id="@+id/btn_MatrixMapRectUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MatrixMapRectUse" />

    <Button
        android:id="@+id/btn_MatrixMapVectorsUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MatrixMapVectors" />

    <Button
        android:id="@+id/btn_MatrixSetPolyToPolyUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MatrixSetPolyToPoly" />

    <Button
        android:id="@+id/btn_MatrixSetPolyToPolyPointCountTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MatrixSetPolyToPolyPointCountTest" />

    <Button
        android:id="@+id/btn_MatrixSetRectToRectTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MatrixSetRectToRectTest" />

    <Button
        android:id="@+id/btn_MatrixAboutMethodTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MatrixAboutMethodTest" />

</LinearLayout>
