<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.liuh.canvaslearn.activity.PathUseDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pathUseMethodDetail"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_pathUseMethodDetailFirstGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathUseMethodDetailFirstGroup" />

    <Button
        android:id="@+id/btn_pathUseMethodDetailAddXxx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathUseMethodDetailAddXxx" />

    <Button
        android:id="@+id/btn_pathUseMethodDetailAddPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathUseMethodDetailAddPath" />

    <Button
        android:id="@+id/btn_pathUseMethodDetailAddArc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathUseMethodDetailAddArc" />

    <Button
        android:id="@+id/btn_pathUseMethodDetailArcTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathUseMethodDetailArcTo" />

    <Button
        android:id="@+id/btn_pathUseMethodDetailOffset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathUseMethodDetailOffset" />

    <Button
        android:id="@+id/btn_pathUseMethodDetailRadarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathUseMethodDetailRadarView" />

</LinearLayout>
