<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.liuh.canvaslearn.activity.PathMeasureUseActivity">

    <Button
        android:id="@+id/btn_PathMeasureConstructor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PathMeasureConstructor" />

    <Button
        android:id="@+id/btn_PathMeasureGetSegment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PathMeasureGetSegment" />

    <Button
        android:id="@+id/btn_PathMeasureNextContour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PathMeasureNextContour" />

</LinearLayout>
