<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.liuh.canvaslearn.activity.PathUseDetailBazierActivity">

    <Button
        android:id="@+id/btn_PathUseDetailBazierSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathUseMethodDetailBazierSecond" />

    <Button
        android:id="@+id/btn_PathUseDetailBazierThird"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathUseMethodDetailBazierThird" />

    <Button
        android:id="@+id/btn_PathUseDetailBazierHeart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathUseMethodDetailBazierHeart" />

</LinearLayout>
